# ups-k8s-scaler

./: .gitignore  .pre-commit-config.yaml  .sdkmanrc  Dockerfile  LICENSE  README.md  entrypoint.sh  example-k8s-manifest.yml  justfile  pyproject.toml  ups-event.py  upsmon.conf
.beads/: issues.jsonl
.github/: renovate.json
.github/workflows/: build-and-publish.yml  docker-publish-all.yaml  docker-publish-only-tags.yml
ups-event-handler/: settings.gradle.kts
ups-event-handler/src/main/kotlin/: JavaKotlinInteropIsAnnoying.kt  ScalableThingWithScaleFunction.kt
ups-event-handler/src/main/kotlin/com/growse/k8s/upsEventHandler/: Either.kt  Main.kt  UPSEvents.kt
ups-event-scaler/: build.gradle.kts  settings.gradle.kts
ups-event-scaler/src/main/kotlin/: Either.kt  Main.kt  UPSEvents.kt
ups-k8s-scaler/: build.gradle.kts  settings.gradle.kts
ups-k8s-scaler/gradle/: libs.versions.toml
ups-k8s-scaler/gradle/wrapper/: gradle-wrapper.properties
ups-k8s-scaler/src/main/kotlin/com/growse/k8s/upsEventHandler/: Main.kt
ups-k8s-scaler/src/main/kotlin/com/growse/k8s/upsEventHandler/k8s/: Either.kt  JavaKotlinInteropIsAnnoying.kt  ScalableThingWithScaleFunction.kt  ScaleResources.kt
ups-k8s-scaler/src/main/kotlin/com/growse/k8s/upsEventHandler/upsClient/: Client.kt  SocketTransport.kt  Transport.kt
ups-k8s-scaler/src/test/kotlin/com/growse/k8s/upsEventHandler/upsClient/: UPSClientTest.kt  UPSStateTest.kt
